Fixed habit card border radius clipping bug

--- a/timetracker/src/App.css
+++ b/timetracker/src/App.css
@@ -55,7 +55,6 @@ body {
 
 /** PROFILE CARD **/
 .profileCard {
-  opacity: 0.25;
   background-color: var(--dark-blue);
   border-radius: 1rem;
   height: var(--card-height);
@@ -122,7 +121,7 @@ body {
 /** HABIT CARD **/
 
 .habitCard {
-  /* opacity: 0.5; */
+  /* opacity: 0; */
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -130,18 +129,17 @@ body {
   margin: 1.5rem 0;
   border-radius: var(--card-border-radius);
   height: 10rem;
-  overflow: hidden;
 }
 
 .habitCardContent {
   display: flex;
   padding: 1.5rem 1.35rem;
+  position: relative;
   z-index: 2;
   flex-wrap: wrap;
-  width: 100%;
   height: 75.5%;
   background-color: var(--dark-blue);
-  border-radius: 0.85rem;
+  border-radius: var(--card-border-radius);
 }
 
 .habitCardIcon {
@@ -151,6 +149,8 @@ body {
   top: 0;
   display: flex;
   justify-content: flex-end;
+  overflow: hidden;
+
 }
 
 .habitCardIcon img {
@@ -258,7 +258,6 @@ body {
   .buttonWrapper {
 
     height: 10rem;
-    /* padding-top: 0.5rem; */
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-evenly;
@@ -281,14 +280,17 @@ body {
   }
 
   .habitCard {
+    align-items: center;
     margin: 0;
     width: 31%;
     height: 15.5rem;
   }
 
   .habitCardContent {
+    position: relative;
+    width: calc(100% + 2px);
+    overflow: visible;
     height: 81%;
-
   }
 
   .cardContentTop {
